--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <div class="slider-controls">
         <!-- <button class="prev">&#10094;</button>
         <button class="next">&#10095;</button> -->
+        <button id="playMusic" style="display: none" class="play-button">
+          Play Music
+        </button>
       </div>
 
       <h2 class="hidden-message">Happy Birthday, Beautiful! 🎉</h2>
